api priecinook premiestnenie suborov, dalsie veci si nepamatam, uz by som to mohla zacat robit po ciastkovych zmenach

--- a/app/src/main/res/layout/activity_group_students.xml
+++ b/app/src/main/res/layout/activity_group_students.xml
@@ -24,7 +24,7 @@
 
         <GridView
             android:id="@+id/studentsLayout"
-            style="@style/gridView"
+            style="@style/scrollGridView"
             android:numColumns="3"
             tools:listitem="@layout/grid_x_list_item" />
 
