--- a/app/src/main/res/layout/activity_student_tasks.xml
+++ b/app/src/main/res/layout/activity_student_tasks.xml
@@ -23,7 +23,7 @@
 
         <GridView
             android:id="@+id/tasksLayout"
-            style="@style/gridView"
+            style="@style/scrollGridView"
             android:numColumns="3"
             tools:listitem="@layout/grid_x_list_item" />
 
