--- a/app/src/main/res/layout/activity_classroom_groups.xml
+++ b/app/src/main/res/layout/activity_classroom_groups.xml
@@ -24,7 +24,7 @@
 
         <GridView
             android:id="@+id/groupsLayout"
-            style="@style/gridView"
+            style="@style/scrollGridView"
             android:numColumns="3"
             tools:listitem="@layout/grid_list_item" />
 
