--- a/app/src/main/res/layout/activity_classroom_students.xml
+++ b/app/src/main/res/layout/activity_classroom_students.xml
@@ -23,7 +23,7 @@
 
         <GridView
             android:id="@+id/studentsLayout"
-            style="@style/gridView"
+            style="@style/scrollGridView"
             android:numColumns="3"
             tools:listitem="@layout/grid_list_item" />
 
