--- a/app/src/main/res/layout/fragment_image_gallery.xml
+++ b/app/src/main/res/layout/fragment_image_gallery.xml
@@ -8,7 +8,7 @@
 
     <GridView
         android:id="@+id/imagesLayout"
-        style="@style/gridView"
+        style="@style/scrollGridView"
         android:layout_marginBottom="0dp"
         android:numColumns="4"
         tools:listitem="@layout/grid_image_list_item"
